--- a/RevolutionDAL/RevolutionDAL/RevolutionDAL.csproj
+++ b/RevolutionDAL/RevolutionDAL/RevolutionDAL.csproj
@@ -83,6 +83,9 @@
     <Compile Include="CharacterService.svc.cs">
       <DependentUpon>CharacterService.svc</DependentUpon>
     </Compile>
+    <Compile Include="Group.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="ICharacterService.cs" />
     <Compile Include="IPersonalityService.cs" />
     <Compile Include="IPhraseService.cs" />
@@ -115,15 +118,36 @@
       <DependentUpon>PhraseService.svc</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Region.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="RevolutionDatabase.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>RevolutionDatabase.edmx</DependentUpon>
     </Compile>
+    <Compile Include="ScopeNode.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ScopeNodeChildParent.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ScopeNodeReputation.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ScopeNodeReputationChildParent.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ScopeNodeType.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="sysdiagram.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Topic.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Town.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
   </ItemGroup>
